--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 #http://stackoverflow.com/questions/9667226/remove-index-php-in-codeigniter-2-1-0
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /myfirstrepo/
+    RewriteBase /ProjectYes/
 
     #Removes access to the system folder by users.
     #Additionally this will allow you to create a System.php controller,
